...
                            Menu {
                                if(viewModel.trackedStatus?.tracked ?? false){
                                    Button {
                                        viewModel.openSetting = true
                                    } label: {
                                        Label("Edit", systemImage: "pencil")
                                    }.accessibilityIdentifier("ProductViewSettingsButton")
                                    Button {
                                        viewModel.stopTracking()
                                        viewModel.trackedStatus?.tracked = false;
                                    } label: {
                                        Label("Stop tracking", systemImage: "minus")
                                    }.accessibilityIdentifier("ProductViewStopTrackProduct")
                                } else {
                                    Button {
                                        viewModel.startTracking()
                                        viewModel.trackedStatus?.tracked = true;
                                    } label: {
                                        Label("Start tracking", systemImage: "plus")
                                    }.accessibilityIdentifier("ProductViewStartTrackProduct")
                                }
                            } label: {
                                Image(systemName: "doc.badge.gearshape")//.font(.title3.bold())
                            }.foregroundColor(Color("PrimaryLabel"))
                                .accessibilityIdentifier("ProductViewSettingsTrackingButton")
                }
            }).sheet(isPresented: $viewModel.openSetting) {
                //if let binding = Binding<TrackingStatus>($viewModel.trackedStatus){
                UpdateTrackingView(isOpen: $viewModel.openSetting, price: viewModel.product.price!, status: Binding($viewModel.trackedStatus)!) {
                        DispatchQueue.main.asyncAfter(deadline: .now() + 0.5) {
                            self.viewModel.updateTracking()
...
